# SplunkMCPTemplate

./: README.md  SplunkMCPTemplate-main.code-workspace  __init__.py  analyzer.py  config.example.yaml  config.py  jira_client.py  main.py  pyproject.toml  report_builder.py  requirements.txt  splunk_client.py  teams_client.py
